# serialbox

./:  .travis.yml  .buildinfo  .bumpversion.toml  .clang-format  .clang-tidy  .gitignore  .gitpod.Dockerfile  .gitpod.yml  .travis.yml  .travis.yml.bak  AUTHORS  Building.html  C++.html  C.html  CMakeLists.txt  Documentation.html  Fortran.html  LICENSE.txt  Python.html  README.md  Usage.html  genindex.html  index.html  objects.inv  patch  pyproject.toml  replace.sh  sdb.html  search.html  searchindex.js
bundle/: CMakeLists.txt
bundle/cmake/: serialbox2CloneRepository.cmake
bundle/cmake-test/: CMakeLists.txt
cmake/: CMakeLists.txt  FindSerialbox.cmake  Packaging.cmake  SerialboxConfig.cmake.in  SerialboxConfig.sh.in  SerialboxConfiguration.cmake.in  SerialboxTooling.cmake
cmake/modules/: CheckCxxCompilerSupport.cmake  CleanAll.cmake  Coverage.cmake  FIndNumPy.cmake  FindClangTools.cmake  FindGlog.cmake  FindGridTools.cmake  FindNetCDF.cmake  FindNumPy.cmake  FindPythonModule.cmake  FindSTELLA.cmake  FindSerialboxOld.cmake  FindSphinx.cmake  FindpFUnit.cmake  GetGitRevisionDescription.cmake  IDESupport.cmake  InitializeYoda.cmake  SerialboxCheckCxxCompilerSupport.cmake  SerialboxCleanAll.cmake  SerialboxCoverage.cmake  SerialboxFortranCompilerFlags.cmake  SerialboxInstallTargets.cmake  SerialboxTestScript.cmake  clean-all.cmake  coverage.cmake
cmake/modules/Fortran/: Cray.cmake  GNU.cmake  PGI.cmake
cmake/script-gen/: CMakeLists.txt  targetsSerialbox.sh
docs/: CMakeLists.txt  Doxyfile.in  index.html
docs/doxygen/: .gitignore  Doxyfile.in  Mainpage.dox
docs/latex/: ppser_doc.tex
docs/sphinx/: .gitignore  Building.rst  C++.rst  C.rst  Documentation.rst  Fortran.rst  Makefile  Python.rst  Usage.rst  conf.py  conf.py.in  index.rst  sdb.rst  test.py
docs/sphinx/test/: ArchiveMetaData-stencil.json  MetaData-stencil.json
examples/: CMakeLists.txt
examples/C/: CMakeLists.txt  example-01-laplacian.c
examples/Fortran/: CMakeLists.txt  m_ser.f90  main_consumer.f90  main_producer.f90
examples/Fortran/with_pp_ser/: CMakeLists.txt  m_ser.f90  main_consumer.f90  main_consumer_perturb.f90  main_producer.f90  run.sh
examples/c/: CMakeLists.txt  example-01-laplacian.c
examples/fortran/: CMakeLists.txt
examples/fortran/perturbation/: .gitignore  CMakeLists.txt  README.md  m_ser.F90  main_consumer.F90  main_consumer.f90  main_consumer_perturb.F90  run.sh
examples/fortran/simple/: m_ser.F90  (+2 more)
examples/gridtools/: CMakeLists.txt  example-01-laplacian.cpp  example-02-stateless.cpp  example-03-slice.cpp
examples/python/: .gitignore  ArchiveMetaData-Field.json  CMakeLists.txt  Field.json  MetaData-Field.json  example-01-laplacian.py  example-02-stateless.py  example-03-slice.py  example-04-savepoints.py  example-05-async.py  example-06-visualization.py
serialbox-c/: CMakeLists.txt
serialbox-c/src/: ErrorHandling.h  FieldMetainfo.h  FortranWrapper.h  Savepoint.cpp  Type.h
serialbox-c/test/: UnittestConfig.cpp  UnittestErrorHandling.cpp
serialbox-fortran/: CMakeLists.txt
serialbox-fortran/src/: .gitignore  CMakeLists.txt  m_ser_ftg.f90  m_ser_ftg_cmp.f90
serialbox-fortran/test/: CMakeLists.txt  ser_ftg_cmp_test.pf  serialbox_test.pf
serialbox-python/: CMakeLists.txt
serialbox-python/test/: CMakeLists.txt  run_python_tests.sh.cmake
src/: CMakeLists.txt
src/Core/: CMakeLists.txt  FieldID.cpp  FieldMap.cpp  FieldMetaInfo.cpp  Logging.cpp  MetaInfoMap.cpp  MetaInfoValue.cpp  SHA256.cpp  Savepoint.cpp  SavepointImpl.cpp  SavepointVector.cpp  SerializerImpl.cpp  StorageView.cpp  StorageViewIterator.cpp  Type.cpp  Unreachable.cpp  UpgradeArchive.cpp
src/Support/: CMakeLists.txt  Logging.cpp  StorageView.cpp  StorageViewIterator.cpp  Type.cpp  Unreachable.cpp
src/serialbox/: CMakeLists.txt
src/serialbox-c/: Api.h  Archive.cpp  Archive.h  Array.cpp  Array.h  CMakeLists.txt  Config.cpp  Config.h  Config.h.cmake  ConfigOptions.cpp  ConfigOptions.h  DataFieldInfo.h  ErrorHandling.cpp  ErrorHandling.h  FieldMetaInfo.cpp  FieldMetaInfo.h  FieldMetainfo.cpp  FieldMetainfo.h  FortranWrapper.cpp  FortranWrapper.h  Logging.cpp  Logging.h  MetaInfo.cpp  MetaInfo.h  Metainfo.cpp  Metainfo.h  Savepoint.cpp  Savepoint.h  Serialbox.cpp  Serialbox.h  Serializer.cpp  Serializer.h  Type.h  Utility.h
src/serialbox-fortran/: CMakeLists.txt  m_ser_ftg.f90  m_ser_ftg_cmp.f90  m_ser_kbuffer.f90  m_ser_perturb.f90  m_serialize.f90  utils_ppser.f90  utils_ppser_kbuff.f90
src/serialbox-python/: CMakeLists.txt  MANIFEST.in  pyproject.toml  requirements.txt  setup.py
test/: CMakeLists.txt
test/Benchmark/: BenchmarkBinaryArchive.cpp  BenchmarkSerialbox.cpp  CMakeLists.txt
test/Unittest/: CMakeLists.txt  FileUtility.h  GridTools.h  STELLA.h  Storage.h  UnittestBinaryArchive.cpp  UnittestEnvironment.cpp  UnittestEnvironment.h  UnittestMain.cpp  UnittestStorage.cpp  UnittestStorageView.cpp  UnittestStorageViewGridTools.cpp  UnittestStorageViewSTELLA.cpp  UnittestTree.cpp  UnittestType.cpp
test/Utility/: BenchmarkEnvironment.cpp  BenchmarkEnvironment.h  CInterfaceTestBase.cpp  CInterfaceTestBase.h  CMakeLists.txt  FileUtility.h  GridTools.h  STELLA.h  Serialbox.h  SerializerTestBase.h  Storage.h  UnittestEnvironment.cpp  UnittestEnvironment.h
test/benchmark/: BenchmarkMain.cpp  BenchmarkOldSerialbox.cpp  BenchmarkSerialbox.cpp  CMakeLists.txt
test/serialbox/: CMakeLists.txt
test/serialbox-c/: CMakeLists.txt  UnittestArchive.cpp  UnittestConfig.cpp  UnittestErrorHandling.cpp  UnittestFieldMetaInfo.cpp  UnittestFortranWrapper.cpp  UnittestLogging.cpp  UnittestMain.cpp  UnittestMetaInfo.cpp  UnittestSavepoint.cpp  UnittestSerializer.cpp
test/serialbox-fortran/: CMakeLists.txt  ser_ftg_cmp_test.pf  ser_ftg_test.pf  serialbox_test.pf
test/serialbox-python/: CMakeLists.txt  run_python_tests.sh.cmake
test/utility/: BenchmarkEnvironment.cpp  BenchmarkEnvironment.h  CInterfaceTestBase.cpp  CInterfaceTestBase.h  CMakeLists.txt  Config.h.cmake  FileUtility.h  GridTools.h  STELLA.h  Serialbox.h  SerializerTestBase.h  Storage.h  UnittestEnvironment.cpp  UnittestEnvironment.h
(+1758 files in other folders)
